# red_statutory

./: .pre-commit-config.yaml  MANIFEST.in  README.md  api.py  hooks.py  pyproject.toml  requirements.txt  setup.py
page/compliance_centre/: compliance_centre.js  compliance_centre.py
red_statutory/: __init__.py  api.py  hooks.py  modules.txt
red_statutory/config/: __init__.py  desktop.py
red_statutory/page/compliance_centre/: __init__.py  compliance_centre.js  compliance_centre.json  compliance_centre.py
red_statutory/red_statutory/: __init__.py
red_statutory/red_statutory/page/compliance_centre/: compliance_centre.js  compliance_centre.json  compliance_centre.py
red_statutory/red_statutory/report/wage_register/: wage_register.js  wage_register.json  wage_register.py
red_statutory/red_statutory/reports/wage_register/: __init__.py  pdf.py  query.py
red_statutory/red_statutory/templates/includes/: wage_register.html
red_statutory/red_statutory/utils/: pdf.py
red_statutory/report/wage_register/: wage_register.js  wage_register.json  wage_register.py
red_statutory/reports/: __init__.py
red_statutory/reports/wage_register/: pdf.py  query.py
red_statutory/templates/: __init__.py
red_statutory/templates/registers/: wage_register.html
red_statutory/utils/: document_engine.py  pdf.py  pdf_generator.py  salary_slip_reader.py
red_statutory/www/: __init__.py
registers/wage_register/: pdf.py  query.py  template.html
utils/: __init__.py  document_engine.py  pdf.py  salary_slip_reader.py
(+1 files in other folders)
